<resources>
    <string name="app_name">Gits</string>
    <string name="gits">Gits</string>
    <string name="show_hello_world">Show Hello World!</string>
    <string name="email_format_check">Email Format Check!</string>
    <string name="conversion_datetime">Conversion DateTime!</string>
    <string name="reverse_text">Reverse Text!</string>
    <string name="palindrome_check">Palindrome Check!</string>
    <string name="masukkan_nilai_berupa_angka">Masukkan Nilai berupa Angka</string>
    <string name="cek_hasil">Cek Hasil</string>
    <string name="hei">Hello World!</string>
    <string name="kondisi">Kondisi</string>
    <string name="pilihan2">- Jika input bilangan habis di bagi 5 dan 3 menampilkan kata “Hello World”</string>
    <string name="pilihan1">- Jika input bilangan habis di bagi 5 menampilkan kata “World”</string>
    <string name="pilihan">- Jika input bilangan habis di bagi 3 menampilkan kata “Hello”</string>
    <string name="hasil">Hasil</string>
    <string name="masukkan_kata">Masukkan Kata</string>
    <string name="contoh">Contoh</string>
    <string name="sample"><![CDATA[“Aplikasi” => “isakilpA”]]></string>
    <string name="sample2"><![CDATA[Katak di balik kataK => Result True (karena palindrom )]]></string>
    <string name="sample3"><![CDATA[Ubi di balik iBu => Result False (karena bukan palindrome )]]></string>
    <string name="faizal_surya">Faizal Surya</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="format_email_wajib_menggunakan">- Format email wajib menggunakan ‘@’</string>
    <string name="kondisiii5">- Format email wajib menggunakan tanda titik ‘.’ setelah ‘@’</string>
    <string name="kondisi6">- Panjang email maksimum 20 karakter sebelum ‘@’</string>
    <string name="kondisi7">- Domain yang diperbolehkan hanya “.co.id” dan “.id”</string>
    <string name="masukkan_angka">Masukkan angka</string>
    <string name="_12_00_00_pm_12_00"><![CDATA[12:00:00 PM => 12:00]]></string>
    <string name="_12_00_00_am_00_00"><![CDATA[12:00:00 AM => 00:00]]></string>
</resources>