<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmailFormatActivity">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_format_check"
        android:textColor="@color/teal_700"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/etTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/boxoutline"
        android:paddingTop="12dp"
        android:paddingBottom="12sp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:hint="@string/masukkan_email"
        android:inputType="textEmailAddress"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btnResultEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etTextEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/box"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/cek_hasil"
        />

    <TextView
        android:id="@+id/nb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kondisi"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginStart="24sp"
        android:layout_marginEnd="24sp"
        app:layout_constraintTop_toBottomOf="@id/btnResultEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/kondisi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/format_email_wajib_menggunakan"
        android:textSize="12sp"
        android:layout_marginStart="24sp"
        android:layout_marginEnd="24sp"
        app:layout_constraintTop_toBottomOf="@id/nb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/kondisi1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kondisiii5"
        android:textSize="12sp"
        android:layout_marginStart="24sp"
        android:layout_marginEnd="24sp"
        app:layout_constraintTop_toBottomOf="@id/kondisi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/kondisi2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kondisi6"
        android:textSize="12sp"
        android:layout_marginStart="24sp"
        android:layout_marginEnd="24sp"
        app:layout_constraintTop_toBottomOf="@id/kondisi1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/kondisi3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kondisi7"
        android:textSize="12sp"
        android:layout_marginStart="24sp"
        android:layout_marginEnd="24sp"
        app:layout_constraintTop_toBottomOf="@id/kondisi2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/cc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/faizal_surya"
        android:gravity="center"
        android:layout_marginStart="24sp"
        android:layout_marginEnd="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>