<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReverseActivity">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reverse_text"
        android:textColor="@color/teal_700"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/etTextReverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/boxoutline"
        android:paddingTop="12dp"
        android:paddingBottom="12sp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:hint="@string/masukkan_kata"
        android:inputType="text"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btnResultReverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etTextReverse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/box"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/cek_hasil"
        />

    <TextView
        android:id="@+id/nb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contoh"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginStart="24sp"
        android:layout_marginEnd="24sp"
        app:layout_constraintTop_toBottomOf="@id/btnResultReverse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/kondisi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sample"
        android:textSize="12sp"
        android:layout_marginStart="24sp"
        android:layout_marginEnd="24sp"
        app:layout_constraintTop_toBottomOf="@id/nb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/cc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/faizal_surya"
        android:gravity="center"
        android:layout_marginStart="24sp"
        android:layout_marginEnd="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>